methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:16: error: ';' expected but 'else' found.
  else{ 
  ^SlugHunting:28: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:41: error: Unmatched closing brace '}' ignored here
}
^